# quanttide-docs-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: lab.ipynb
quanttide_docs/: config.py  utils.py
quanttide_docs/cli/: __main__.py  tutorial.py
quanttide_docs/models/: __init__.py  article.py  book.py  git.py  toc.py  tutorial.py
tests/: test_cli_tutorial.py  test_models_article.py  test_models_book.py  test_models_git.py  test_models_toc.py  test_models_tutorial.py  test_utils.py
tests/example_book/: README.md  _config.yml  _toc.yml  _toc_with_parts.yml
tests/example_book/4_example_chapter4/: 1_example_article4.md
