[build-system]
requires = ["setuptools>=61", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
# name it as your package name
name = "quanttide-docs-python"
# semetric versions
version = "0.1.0-beta.1"
# describe the package within one sentence
description = "量潮文档Python工具包"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3'
dependencies = [
    "dynaconf",
    "gitpython",
    "yaml",
    "markdown",
    "markdown-full-yaml-metadata",
]
# dynamic = ["version"]

[project.license]
# create your license and name it as "LICENSE"
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"
